--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "botticelli_vite",
-  "version": "1.0.0",
-  "description": "An Electron application with React and TypeScript",
+  "name": "botticelli",
+  "version": "0.1.0",
+  "name": "botticelli",
+  "version": "0.1.0",
+  "description": "An environment to configure and deploy conversational agents.",
+  "repository": "https://github.com/juancarlosfarah/botticelli",
+  "author": "Juan Carlos Farah",
+  "license": "AGPL-3.0-only",
   "main": "./out/main/index.js",
-  "author": "example.com",
-  "homepage": "https://www.electronjs.org",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
@@ -17,12 +20,17 @@
     "postinstall": "electron-builder install-app-deps",
     "build:win": "npm run build && electron-builder --win --config",
     "build:mac": "electron-vite build && electron-builder --mac --config",
-    "build:linux": "electron-vite build && electron-builder --linux --config"
+    "build:linux": "electron-vite build && electron-builder --linux --config",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^2.0.0",
-    "electron-updater": "^6.1.1"
+    "@swc/core": "^1.3.92",
+    "electron-updater": "^6.1.1",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.2",
+    "typeorm": "0.3.17"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^1.0.1",
@@ -40,7 +48,7 @@
     "prettier": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^5.1.6",
+    "typescript": "5.1.6",
     "vite": "^4.4.9"
   }
 }
