--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
   "name": "botticelli",
   "version": "0.1.0",
-  "name": "botticelli",
-  "version": "0.1.0",
   "description": "An environment to configure and deploy conversational agents.",
   "repository": "https://github.com/juancarlosfarah/botticelli",
   "author": "Juan Carlos Farah",
@@ -26,8 +24,15 @@
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^2.0.0",
+    "@emotion/react": "11.11.1",
+    "@emotion/styled": "11.11.0",
+    "@fontsource/inter": "5.0.13",
+    "@mui/icons-material": "5.14.13",
+    "@mui/joy": "5.0.0-beta.10",
+    "@mui/material": "5.14.13",
     "@swc/core": "^1.3.92",
     "electron-updater": "^6.1.1",
+    "react-router-dom": "6.16.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "typeorm": "0.3.17"
