--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "@mui/icons-material": "5.14.13",
     "@mui/joy": "5.0.0-beta.10",
     "@mui/material": "5.14.13",
+    "@reduxjs/toolkit": "1.9.7",
     "@swc/core": "^1.3.92",
+    "class-transformer": "0.5.1",
     "electron-updater": "^6.1.1",
+    "react-redux": "8.1.3",
     "react-router-dom": "6.16.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
