feat: integrate messages

--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -15,6 +15,9 @@
     "paths": {
       "@renderer/*": [
         "src/renderer/src/*"
+      ],
+      "@shared/*": [
+        "src/shared/*"
       ]
     }
   }
