--- a/package.json
+++ b/package.json
@@ -27,16 +27,23 @@
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
     "@fontsource/inter": "5.0.13",
-    "@mui/icons-material": "5.14.13",
-    "@mui/joy": "5.0.0-beta.10",
-    "@mui/material": "5.14.13",
+    "@mui/icons-material": "5.14.14",
+    "@mui/joy": "5.0.0-beta.11",
+    "@mui/material": "5.14.14",
     "@reduxjs/toolkit": "1.9.7",
-    "@swc/core": "^1.3.92",
+    "@swc/core": "^1.3.93",
     "class-transformer": "0.5.1",
     "electron-updater": "^6.1.1",
+    "i18next": "23.6.0",
+    "prism-react-renderer": "2.1.0",
+    "react-i18next": "13.3.1",
+    "react-markdown": "9.0.0",
+    "react-mde": "11.5.0",
     "react-redux": "8.1.3",
-    "react-router-dom": "6.16.0",
+    "react-router-dom": "6.17.0",
     "reflect-metadata": "^0.1.13",
+    "remark-breaks": "4.0.0",
+    "remark-gfm": "4.0.0",
     "sqlite3": "^5.0.2",
     "typeorm": "0.3.17"
   },
@@ -45,18 +52,19 @@
     "@electron-toolkit/eslint-config-ts": "^1.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@types/node": "^18.17.5",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^18.2.29",
+    "@types/react-dom": "^18.2.14",
     "@vitejs/plugin-react": "^4.0.4",
     "electron": "^25.6.0",
     "electron-builder": "^24.6.3",
+    "electron-devtools-installer": "3.2.0",
     "electron-vite": "^1.0.27",
     "eslint": "^8.47.0",
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "5.1.6",
-    "vite": "^4.4.9"
+    "typescript": "5.2.2",
+    "vite": "^4.5.0"
   }
 }
