feat: connect to openai

--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "class-transformer": "0.5.1",
     "electron-updater": "^6.1.1",
     "i18next": "23.6.0",
+    "openai": "^4.0.0",
     "prism-react-renderer": "2.1.0",
+    "react-content-loader": "6.2.1",
     "react-i18next": "13.3.1",
     "react-markdown": "9.0.0",
     "react-mde": "11.5.0",
