--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@mui/material": "5.14.14",
     "@reduxjs/toolkit": "1.9.7",
     "@swc/core": "^1.3.93",
+    "@trivago/prettier-plugin-sort-imports": "4.2.1",
     "class-transformer": "0.5.1",
+    "electron-log": "5.0.0",
     "electron-updater": "^6.1.1",
     "i18next": "23.6.0",
     "openai": "^4.0.0",
@@ -40,7 +42,6 @@
     "react-content-loader": "6.2.1",
     "react-i18next": "13.3.1",
     "react-markdown": "9.0.0",
-    "react-mde": "11.5.0",
     "react-redux": "8.1.3",
     "react-router-dom": "6.17.0",
     "reflect-metadata": "^0.1.13",
