--- a/.prettierrc
+++ b/.prettierrc
@@ -14,5 +14,6 @@
   ],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
+  "importOrderParserPlugins": ["typescript", "jsx", "decorators"],
   "plugins": ["@trivago/prettier-plugin-sort-imports"]
 }
