--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -14,6 +14,8 @@
     "outDir": "./build",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    // to avoid over-annotating typeorm entities
+    "strictPropertyInitialization": false,
     "sourceMap": true,
     "paths": {
       "@main/*": [
