--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,7 +1,9 @@
 compressionLevel: mixed
 
+defaultSemverRangePrefix: ""
+
 enableGlobalCache: false
 
 nodeLinker: node-modules
 
-yarnPath: .yarn/releases/yarn-4.0.2.cjs
+yarnPath: .yarn/releases/yarn-4.1.1.cjs
