--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
-    "@electron-toolkit/preload": "^2.0.0",
-    "@electron-toolkit/utils": "^2.0.0",
+    "@electron-toolkit/preload": "2.0.0",
+    "@electron-toolkit/utils": "2.0.0",
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
     "@fontsource/inter": "5.0.15",
@@ -31,44 +31,50 @@
     "@mui/joy": "5.0.0-beta.28",
     "@mui/material": "5.15.10",
     "@reduxjs/toolkit": "1.9.7",
-    "@swc/core": "^1.3.93",
+    "@swc/core": "1.3.93",
     "@trivago/prettier-plugin-sort-imports": "4.3.0",
     "class-transformer": "0.5.1",
     "electron-log": "5.0.0",
-    "electron-updater": "^6.1.1",
+    "electron-updater": "6.1.1",
     "i18next": "23.6.0",
-    "openai": "^4.0.0",
+    "lodash.capitalize": "4.2.1",
+    "lodash.delay": "4.1.1",
+    "lodash.isnull": "3.0.0",
+    "openai": "4.0.0",
     "prism-react-renderer": "2.1.0",
     "react-content-loader": "6.2.1",
     "react-i18next": "13.3.1",
     "react-markdown": "9.0.0",
     "react-redux": "8.1.3",
     "react-router-dom": "6.17.0",
-    "reflect-metadata": "^0.1.13",
+    "reflect-metadata": "0.1.13",
     "remark-breaks": "4.0.0",
     "remark-gfm": "4.0.0",
-    "sqlite3": "^5.0.2",
+    "sqlite3": "5.1.6",
     "typeorm": "0.3.17"
   },
   "devDependencies": {
-    "@electron-toolkit/eslint-config-prettier": "^1.0.1",
-    "@electron-toolkit/eslint-config-ts": "^1.0.0",
-    "@electron-toolkit/tsconfig": "^1.0.1",
-    "@types/node": "^18.17.5",
-    "@types/react": "^18.2.29",
-    "@types/react-dom": "^18.2.14",
-    "@vitejs/plugin-react": "^4.0.4",
-    "electron": "^25.6.0",
-    "electron-builder": "^24.6.3",
+    "@electron-toolkit/eslint-config-prettier": "1.0.1",
+    "@electron-toolkit/eslint-config-ts": "1.0.0",
+    "@electron-toolkit/tsconfig": "1.0.1",
+    "@types/lodash.capitalize": "^4",
+    "@types/lodash.delay": "^4",
+    "@types/lodash.isnull": "3.0.0",
+    "@types/node": "18.17.5",
+    "@types/react": "18.2.29",
+    "@types/react-dom": "18.2.14",
+    "@vitejs/plugin-react": "4.0.4",
+    "electron": "25.9.8",
+    "electron-builder": "24.6.3",
     "electron-devtools-installer": "3.2.0",
-    "electron-vite": "^1.0.27",
-    "eslint": "^8.53.0",
-    "eslint-plugin-react": "^7.33.2",
-    "prettier": "^3.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "electron-vite": "1.0.27",
+    "eslint": "8.53.0",
+    "eslint-plugin-react": "7.33.2",
+    "prettier": "3.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "typescript": "5.2.2",
-    "vite": "^4.5.0"
+    "vite": "4.5.2"
   },
-  "packageManager": "yarn@4.0.2"
+  "packageManager": "yarn@4.1.1"
 }
