--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-transformer": "0.5.1",
     "electron-log": "5.0.0",
     "electron-updater": "6.1.1",
+    "fluent-ffmpeg": "2.1.3",
     "i18next": "23.6.0",
     "lodash.capitalize": "4.2.1",
     "lodash.delay": "4.1.1",
@@ -51,7 +52,8 @@
     "remark-breaks": "4.0.0",
     "remark-gfm": "4.0.0",
     "sqlite3": "5.1.6",
-    "typeorm": "0.3.17"
+    "typeorm": "0.3.17",
+    "whisper-node": "1.1.1"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "1.0.1",
