--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "class-transformer": "0.5.1",
     "electron-log": "5.0.0",
     "electron-updater": "6.1.1",
-    "i18next": "23.6.0",
+    "i18next": "24.2.2",
+    "i18next-electron-fs-backend": "3.0.3",
+    "i18next-fs-backend": "2.6.0",
+    "i18next-resources-to-backend": "1.2.1",
     "lodash.capitalize": "4.2.1",
     "lodash.delay": "4.1.1",
     "lodash.isnull": "3.0.0",
